{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 479,
  "lineage": "de958798-610b-22a0-6206-a2943592e5ef",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:449191035420:vpc/vpc-06d33e3dc78efbd2c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f8a9cfded506703d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0345597985ecb8640",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d33e3dc78efbd2c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06bee20956f7d49a5",
            "owner_id": "449191035420"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:loadbalancer/app/my-alb/8e920d20467c72cc",
            "arn_suffix": "app/my-alb/8e920d20467c72cc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-210993409.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:loadbalancer/app/my-alb/8e920d20467c72cc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b71007dd8e1188b1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e8e88b92246af9b"
              },
              {
                "subnet_id": "subnet-08bd21c9405b09323"
              },
              {
                "subnet_id": "subnet-0e7b0ac6fc112b78e"
              }
            ],
            "subnets": [
              "subnet-04e8e88b92246af9b",
              "subnet-08bd21c9405b09323",
              "subnet-0e7b0ac6fc112b78e"
            ],
            "vpc_id": "vpc-06d33e3dc78efbd2c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_subnets.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:listener/app/my-alb/8e920d20467c72cc/29fcd1ea42705bef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:targetgroup/alb-tg/ea4b390dfaba1b8d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:listener/app/my-alb/8e920d20467c72cc/29fcd1ea42705bef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:loadbalancer/app/my-alb/8e920d20467c72cc",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my-alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.alb-sg",
            "data.aws_subnets.selected",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:targetgroup/alb-tg/ea4b390dfaba1b8d",
            "arn_suffix": "targetgroup/alb-tg/ea4b390dfaba1b8d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:targetgroup/alb-tg/ea4b390dfaba1b8d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d33e3dc78efbd2c"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:targetgroup/alb-tg/ea4b390dfaba1b8d-20230823061004759400000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:targetgroup/alb-tg/ea4b390dfaba1b8d",
            "target_id": "i-0c468aed68121ba80"
          },
          "dependencies": [
            "aws_lb_target_group.alb-tg",
            "data.aws_instances.tagged_instances",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:targetgroup/alb-tg/ea4b390dfaba1b8d-20230823061004532700000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:449191035420:targetgroup/alb-tg/ea4b390dfaba1b8d",
            "target_id": "i-076bfbe6049023cd6"
          },
          "dependencies": [
            "aws_lb_target_group.alb-tg",
            "data.aws_instances.tagged_instances2",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:449191035420:security-group/sg-0b71007dd8e1188b1",
            "description": "Allow http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b71007dd8e1188b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "449191035420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_htp"
            },
            "tags_all": {
              "Name": "allow_htp"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d33e3dc78efbd2c"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}